--- a/awesomeWebpage/index.html
+++ b/awesomeWebpage/index.html
@@ -100,7 +100,7 @@
 
                 var count = document.getElementById("rowsCount").value;
 
-                var url = `http://heathtech.duckdns.org:8080/brew/tilt/latest?limit=${count}`
+                var url = `/brew/tilt/latest?limit=${count}`
                 //var url = `http://192.168.1.98:8080/brew/tilt/latest?limit=${count}`
 
                 xhttp.open("GET", url, true)
